--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "framer-motion": "^7.6.7",
     "next": "13.0.0",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-dom": "18.2.0",
+    "react-hook-form": "^7.39.7"
   },
   "devDependencies": {
     "@types/node": "18.11.7",
