--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
     "@chakra-ui/react": "^2.4.1",
     "@emotion/react": "^11.10.5",
     "@emotion/styled": "^11.10.5",
+    "@tanstack/react-query": "^4.28.0",
+    "axios": "^1.3.4",
     "framer-motion": "^7.6.7",
     "lodash": "^4.17.21",
     "next": "13.0.0",
